Patch footer + fix some more spacing / fonts

--- a/assets/scss/bulma-overrides.scss
+++ b/assets/scss/bulma-overrides.scss
@@ -10,7 +10,7 @@ $family-monospace: 'IBM Plex Mono', monospace;
 $blue: #03c;
 
 .title.is-3 {
-	font-weight: 400 !important;
+	font-weight: 300 !important;
 	margin-bottom: 0.5rem !important; 
 }
 
